@@ -19,6 +19,9 @@ end
 class TestRubyMode
   EVAL_OPT = "--eval"
   EXPR_SAVE = "(save-buffer 0)"
+  finish_mark = "ok-#{$$}"
+  FINISH_MARK = /^#{finish_mark}$/
+  EXPR_FINISH = "(print \'#{finish_mark})"
   EXPR_RUBYMODE = "(ruby-mode)"
 
   def run_emacs(src, *exprs)
@@ -28,6 +31,7 @@ class TestRubyMode
     exprs = exprs.map {|expr| [EVAL_OPT, expr]}.flatten
     exprs.unshift(EVAL_OPT, EXPR_RUBYMODE)
     exprs.push(EVAL_OPT, EXPR_SAVE)
+    exprs.push(EVAL_OPT, EXPR_FINISH)
     output = IO.popen([*EMACS, tmp.path, *exprs, err:[:child, :out]], "r") {|e| e.read}
     tmp.open
     result = tmp.read
@@ -46,7 +50,7 @@ class TestRubyMode
         source.gsub!(space, '')
       end
       result, output = run_emacs(source, EXPR_INDENT)
-      assert_match(/^Wrote /, output)
+      assert_match(FINISH_MARK, output)
       assert_equal(expected, result, message(*message) {diff expected, result})
     end
 
